--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,20 @@ version: 1.0
 author: Andrew121410
 main: com.andrew121410.mc.world16jails.Main
 api-version: 1.16
+
+commands:
+  jail:
+    permission: world16.jail
+    usage: "/<command> [create|cell|delete|incarcerate|version"
+
+permissions:
+  world16.jail:
+    description: The base permisison for jails
+  world16.jail.create:
+    description: Allows you to create a jail
+  world16.jail.cell:
+    description: Allows you do manage cells in jail
+  world16.jail.delete:
+    description: Allows you to delete a jail
+  world16.jail.incarcerate:
+    description: Allows you to jail a person
