--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
             <groupId>com.andrew121410.mc</groupId>
             <artifactId>World1-6Utils-Plugin</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
