--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,11 @@
 name: World1-6Jails
-version: 1.0
+version: 1.1
 author: Andrew121410
 main: com.andrew121410.mc.world16jails.World16Jails
 api-version: 1.16
+
+depend:
+  - World1-6Utils
 
 commands:
   jail:
